OO-5256: Advanced configuration of course element user rights